2004-05-21  John Finlay  <finlay@moeraki.com>

	* gtk/gtk-types.c (_pygtk_tree_model_remove_row) Add function to
	help in row removal from sort and filter models using del
	(_pygtk_tree_model_set_row) Add support for TreeModelSort and
	TreeModelFilter setting row values.

	* gtk/pygtk-private.h (_pygtk_tree_model_remove_row) Add declaration.

	* gtk/gtktreeview.override (_wrap_gtk_tree_model_tp_setitem) Use
	_pygtk_tree_model_remove_row() helper function.
	(_wrap_gtk_tree_model_filter_set_modify_func) Add.
	Add support to TreeModelSort and TreeModelFilter for Python mapping,
	number and iter protocols.

2004-05-20  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.defs (gtk_tree_view_column_pack_start)
	(gtk_tree_view_column_pack_end) Allow expand param to default to TRUE.

2004-05-18  John Finlay  <finlay@moeraki.com>

	* gtk/gtktreeview.override (_wrap_gtk_list_store_remove) Remove
	this override - generated code is good.

	* pygobject.c (pygobject_new_with_interfaces) Add new type to the
	module dict as is done for built-in types.

	* codegen/argtypes.py Fix bug in non-null default parselist
	of ObjectArg. Add default handling for AtomArg.

	* gtk/gtk.defs (gtk_clipboard_get_for_display)
	(gtk_clipboard_get) Allow args to use default values.

2004-05-16  John Finlay  <finlay@moeraki.com>

	* gtk/gtktreeview.override (_wrap_gtk_tree_selection_select_range)
	Raise TypeError if selection mode is not gtk.SELECTION_MULTIPLE

2004-05-15  John Finlay  <finlay@moeraki.com>

	* gtk/gtktreeview.override (_wrap_gtk_tree_selection_select_all)
	Raise TypeError if selection mode is not gtk.SELECTION_MULTIPLE

2004-05-13  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.defs (gtk_selection_data_set_text) Default the text len
	param to -1.

2004-05-11  John Finlay  <finlay@moeraki.com>

	* gtk/gtktreeview.override
	(_wrap_gtk_tree_view_column_set_cell_data_func) Allow func to
	be None to unset the function.

2004-05-10  John Finlay  <finlay@moeraki.com>
