@@ -1,3 +1,9 @@
+2004-05-21  Johan Dahlin  <johan@gnome.org>
+
+	* gobjectmodule.c (initgobject): Add gobject.pygtk_version
+	(_wrap_g_main_context_iteration): block/unblock
+	(_wrap_g_main_loop_run): ditto
+
 2004-05-21  John Finlay  <finlay@moeraki.com>
 
 	* gtk/gtk-types.c (_pygtk_tree_model_remove_row) Add function to
